--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+.background {
+  background-image: url("../media/Background.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
