--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,10 +1,19 @@
 @charset "UTF-8";
 .background {
   background-image: url("../media/Background.png");
-  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+}
+
+.img-responsive {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.text {
+  background-color: rgba(0, 0, 0, 0.425);
+  color: #ffffff;
 }
 
 /*!
