--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -24,7 +24,7 @@ $black: #000;
 //Background
 .background {
   background-image: url('../media/Background.png');
-  //background-size: cover; // Cover the entire element
+  background-size: cover; // Cover the entire element
   background-position: center; // Center the image
   background-repeat: no-repeat; // Prevent repetition
 
@@ -33,16 +33,93 @@ $black: #000;
 
 //TODO: MAKE IT CONTENT FRIENDLY
 .img-responsive {
-  width: 100%;
-  height: auto;
-  object-fit: cover; // Options: contain, cover, fill, none, scale-down
+  width: 70%;
+  height: 70%;
+  object-fit: scale-down; // Options: contain, cover, fill, none, scale-down
+
 }
 
 
-.text{
+.text {
   background-color: rgba(0, 0, 0, 0.425); // Fully transparent background
   color: #ffffff; // White text color
+  margin-left: px;
 }
+
+.navigationbar {
+
+  @extend .navbar;
+  @extend .navbar-expand-lg;
+  @extend .navbar-dark;
+  @extend .p-md-3;
+
+  padding: 20px;
+
+  .navbar-nav {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+
+    .nav-item {
+      position: relative;
+      margin-right: 15px;
+      padding: 0;
+
+      // Styling the <a> inside the <li>
+      .nav-link {
+        display: block;
+        padding: 10px 20px;
+        background-color: #2E4E1E; // Dark green
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+        position: relative;
+      }
+
+      // Adding the triangles on the <li>
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 0;
+        height: 0;
+        border-style: solid;
+      }
+
+      // Left triangle
+      &::before {
+        left: -15px;
+        border-width: 20px 15px 20px 0;
+        border-color: transparent #2E4E1E transparent transparent;
+      }
+
+      // Right triangle
+      &::after {
+        right: -15px;
+        border-width: 20px 0 20px 15px;
+        border-color: transparent transparent transparent #2E4E1E;
+      }
+
+      // Hover effect to change background color
+      &:hover {
+        .nav-link {
+          background-color: #1F3B15; // Darker green
+
+          &::before,
+          &::after {
+            border-color: transparent #1F3B15 transparent transparent;
+          }
+        }
+      }
+    }
+
+
+  }
+}
+
+
 
 $primary: $teal;
 $secondary: $green;
