--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -96,7 +96,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #20c997;
+  --bs-primary: #2E4E1E;
   --bs-secondary: #198754;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -104,7 +104,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 32, 201, 151;
+  --bs-primary-rgb: 46, 78, 30;
   --bs-secondary-rgb: 25, 135, 84;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -112,7 +112,7 @@
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
-  --bs-primary-text-emphasis: #0d503c;
+  --bs-primary-text-emphasis: #121f0c;
   --bs-secondary-text-emphasis: #0a3622;
   --bs-success-text-emphasis: #0a3622;
   --bs-info-text-emphasis: #055160;
@@ -120,7 +120,7 @@
   --bs-danger-text-emphasis: #58151c;
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
-  --bs-primary-bg-subtle: #d2f4ea;
+  --bs-primary-bg-subtle: #d5dcd2;
   --bs-secondary-bg-subtle: #d1e7dd;
   --bs-success-bg-subtle: #d1e7dd;
   --bs-info-bg-subtle: #cff4fc;
@@ -128,7 +128,7 @@
   --bs-danger-bg-subtle: #f8d7da;
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
-  --bs-primary-border-subtle: #a6e9d5;
+  --bs-primary-border-subtle: #abb8a5;
   --bs-secondary-border-subtle: #a3cfbb;
   --bs-success-border-subtle: #a3cfbb;
   --bs-info-border-subtle: #9eeaf9;
@@ -160,11 +160,11 @@
   --bs-tertiary-bg: #f8f9fa;
   --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-heading-color: inherit;
-  --bs-link-color: #20c997;
-  --bs-link-color-rgb: 32, 201, 151;
+  --bs-link-color: #2E4E1E;
+  --bs-link-color-rgb: 46, 78, 30;
   --bs-link-decoration: underline;
-  --bs-link-hover-color: #1aa179;
-  --bs-link-hover-color-rgb: 26, 161, 121;
+  --bs-link-hover-color: #253e18;
+  --bs-link-hover-color-rgb: 37, 62, 24;
   --bs-code-color: #d63384;
   --bs-highlight-color: #212529;
   --bs-highlight-bg: #fff3cd;
@@ -185,7 +185,7 @@
   --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-focus-ring-width: 0.25rem;
   --bs-focus-ring-opacity: 0.25;
-  --bs-focus-ring-color: rgba(32, 201, 151, 0.25);
+  --bs-focus-ring-color: rgba(46, 78, 30, 0.25);
   --bs-form-valid-color: #198754;
   --bs-form-valid-border-color: #198754;
   --bs-form-invalid-color: #dc3545;
@@ -208,7 +208,7 @@
   --bs-tertiary-color-rgb: 222, 226, 230;
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
-  --bs-primary-text-emphasis: #79dfc1;
+  --bs-primary-text-emphasis: #829578;
   --bs-secondary-text-emphasis: #75b798;
   --bs-success-text-emphasis: #75b798;
   --bs-info-text-emphasis: #6edff6;
@@ -216,7 +216,7 @@
   --bs-danger-text-emphasis: #ea868f;
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
-  --bs-primary-bg-subtle: #06281e;
+  --bs-primary-bg-subtle: #091006;
   --bs-secondary-bg-subtle: #051b11;
   --bs-success-bg-subtle: #051b11;
   --bs-info-bg-subtle: #032830;
@@ -224,7 +224,7 @@
   --bs-danger-bg-subtle: #2c0b0e;
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
-  --bs-primary-border-subtle: #13795b;
+  --bs-primary-border-subtle: #1c2f12;
   --bs-secondary-border-subtle: #0f5132;
   --bs-success-border-subtle: #0f5132;
   --bs-info-border-subtle: #087990;
@@ -233,10 +233,10 @@
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-heading-color: inherit;
-  --bs-link-color: #79dfc1;
-  --bs-link-hover-color: #94e5cd;
-  --bs-link-color-rgb: 121, 223, 193;
-  --bs-link-hover-color-rgb: 148, 229, 205;
+  --bs-link-color: #829578;
+  --bs-link-hover-color: #9baa93;
+  --bs-link-color-rgb: 130, 149, 120;
+  --bs-link-hover-color-rgb: 155, 170, 147;
   --bs-code-color: #e685b5;
   --bs-highlight-color: #dee2e6;
   --bs-highlight-bg: #664d03;
@@ -1997,13 +1997,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #d2f4ea;
-  --bs-table-border-color: #a8c3bb;
-  --bs-table-striped-bg: #c8e8de;
+  --bs-table-bg: #d5dcd2;
+  --bs-table-border-color: #aab0a8;
+  --bs-table-striped-bg: #cad1c8;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #bddcd3;
+  --bs-table-active-bg: #c0c6bd;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #c2e2d8;
+  --bs-table-hover-bg: #c5ccc2;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2201,9 +2201,9 @@ progress {
 .form-control:focus {
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg);
-  border-color: #90e4cb;
+  border-color: #97a78f;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(46, 78, 30, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   min-width: 85px;
@@ -2346,9 +2346,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #90e4cb;
+  border-color: #97a78f;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(46, 78, 30, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2430,13 +2430,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #90e4cb;
+  border-color: #97a78f;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(46, 78, 30, 0.25);
 }
 .form-check-input:checked {
-  background-color: #20c997;
-  border-color: #20c997;
+  background-color: #2E4E1E;
+  border-color: #2E4E1E;
 }
 .form-check-input:checked[type=checkbox] {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -2445,8 +2445,8 @@ textarea.form-control-lg {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #20c997;
-  border-color: #20c997;
+  background-color: #2E4E1E;
+  border-color: #2E4E1E;
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2477,7 +2477,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2390e4cb'/%3e%3c/svg%3e");
+  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2397a78f'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2523,10 +2523,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(46, 78, 30, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(46, 78, 30, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2536,7 +2536,7 @@ textarea.form-control-lg {
   height: 1rem;
   margin-top: -0.25rem;
   appearance: none;
-  background-color: #20c997;
+  background-color: #2E4E1E;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2547,7 +2547,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #bcefe0;
+  background-color: #c0cabc;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2562,7 +2562,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   appearance: none;
-  background-color: #20c997;
+  background-color: #2E4E1E;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2573,7 +2573,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #bcefe0;
+  background-color: #c0cabc;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -3034,20 +3034,20 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #20c997;
-  --bs-btn-border-color: #20c997;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #41d1a7;
-  --bs-btn-hover-border-color: #36cea1;
-  --bs-btn-focus-shadow-rgb: 27, 171, 128;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #4dd4ac;
-  --bs-btn-active-border-color: #36cea1;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #2E4E1E;
+  --bs-btn-border-color: #2E4E1E;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #27421a;
+  --bs-btn-hover-border-color: #253e18;
+  --bs-btn-focus-shadow-rgb: 77, 105, 64;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #253e18;
+  --bs-btn-active-border-color: #233b17;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #20c997;
-  --bs-btn-disabled-border-color: #20c997;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #2E4E1E;
+  --bs-btn-disabled-border-color: #2E4E1E;
 }
 
 .btn-secondary {
@@ -3170,19 +3170,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #20c997;
-  --bs-btn-border-color: #20c997;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #20c997;
-  --bs-btn-hover-border-color: #20c997;
-  --bs-btn-focus-shadow-rgb: 32, 201, 151;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #20c997;
-  --bs-btn-active-border-color: #20c997;
+  --bs-btn-color: #2E4E1E;
+  --bs-btn-border-color: #2E4E1E;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #2E4E1E;
+  --bs-btn-hover-border-color: #2E4E1E;
+  --bs-btn-focus-shadow-rgb: 46, 78, 30;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #2E4E1E;
+  --bs-btn-active-border-color: #2E4E1E;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #20c997;
+  --bs-btn-disabled-color: #2E4E1E;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #20c997;
+  --bs-btn-disabled-border-color: #2E4E1E;
   --bs-gradient: none;
 }
 
@@ -3317,7 +3317,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: 0 0 0 #000;
-  --bs-btn-focus-shadow-rgb: 27, 171, 128;
+  --bs-btn-focus-shadow-rgb: 77, 105, 64;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -3424,7 +3424,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: var(--bs-body-color);
   --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #20c997;
+  --bs-dropdown-link-active-bg: #2E4E1E;
   --bs-dropdown-link-disabled-color: var(--bs-tertiary-color);
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -3690,7 +3690,7 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #20c997;
+  --bs-dropdown-link-active-bg: #2E4E1E;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -3830,7 +3830,7 @@ textarea.form-control-lg {
 }
 .nav-link:focus-visible {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(46, 78, 30, 0.25);
 }
 .nav-link.disabled, .nav-link:disabled {
   color: var(--bs-nav-link-disabled-color);
@@ -3873,7 +3873,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: var(--bs-border-radius);
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #20c997;
+  --bs-nav-pills-link-active-bg: #2E4E1E;
 }
 .nav-pills .nav-link {
   border-radius: var(--bs-nav-pills-border-radius);
@@ -4566,8 +4566,8 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%230d503c' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23121f0c' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(46, 78, 30, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
   --bs-accordion-active-color: var(--bs-primary-text-emphasis);
@@ -4684,8 +4684,8 @@ textarea.form-control-lg {
 }
 
 [data-bs-theme=dark] .accordion-button::after {
-  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2379dfc1'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2379dfc1'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23829578'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23829578'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 
 .breadcrumb {
@@ -4734,10 +4734,10 @@ textarea.form-control-lg {
   --bs-pagination-hover-border-color: var(--bs-border-color);
   --bs-pagination-focus-color: var(--bs-link-hover-color);
   --bs-pagination-focus-bg: var(--bs-secondary-bg);
-  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(46, 78, 30, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: #20c997;
-  --bs-pagination-active-border-color: #20c997;
+  --bs-pagination-active-bg: #2E4E1E;
+  --bs-pagination-active-border-color: #2E4E1E;
   --bs-pagination-disabled-color: var(--bs-secondary-color);
   --bs-pagination-disabled-bg: var(--bs-secondary-bg);
   --bs-pagination-disabled-border-color: var(--bs-border-color);
@@ -4949,7 +4949,7 @@ textarea.form-control-lg {
   --bs-progress-border-radius: var(--bs-border-radius);
   --bs-progress-box-shadow: var(--bs-box-shadow-inset);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: #20c997;
+  --bs-progress-bar-bg: #2E4E1E;
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -5014,8 +5014,8 @@ textarea.form-control-lg {
   --bs-list-group-disabled-color: var(--bs-secondary-color);
   --bs-list-group-disabled-bg: var(--bs-body-bg);
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: #20c997;
-  --bs-list-group-active-border-color: #20c997;
+  --bs-list-group-active-bg: #2E4E1E;
+  --bs-list-group-active-border-color: #2E4E1E;
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -5346,7 +5346,7 @@ textarea.form-control-lg {
   --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
   --bs-btn-close-opacity: 0.5;
   --bs-btn-close-hover-opacity: 0.75;
-  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(32, 201, 151, 0.25);
+  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(46, 78, 30, 0.25);
   --bs-btn-close-focus-opacity: 1;
   --bs-btn-close-disabled-opacity: 0.25;
   --bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
@@ -6820,7 +6820,7 @@ textarea.form-control-lg {
 }
 
 .text-bg-primary {
-  color: #000 !important;
+  color: #fff !important;
   background-color: RGBA(var(--bs-primary-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -6864,8 +6864,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: RGBA(77, 212, 172, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(77, 212, 172, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(37, 62, 24, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(37, 62, 24, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-secondary {
