--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -3,6 +3,7 @@
 $blue: #0d6efd !default;
 $green: #198754 !default;
 $teal: #20c997 !default;
+$darkgreen: #2E4E1E;
 
 
 // White - Gray colors
@@ -121,7 +122,7 @@ $black: #000;
 
 
 
-$primary: $teal;
+$primary: $darkgreen;
 $secondary: $green;
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
