--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -66,7 +66,7 @@
 }
 .navigationbar .navbar-nav .nav-item::before {
   left: -15px;
-  border-width: 20px 15px 20px 0;
+  border-width: 20px 15px 25px 0;
   border-color: transparent #2E4E1E transparent transparent;
 }
 .navigationbar .navbar-nav .nav-item::after {
@@ -75,23 +75,24 @@
   border-color: transparent transparent transparent #2E4E1E;
 }
 .navigationbar .navbar-nav .nav-item:hover .nav-link {
-  background-color: #1F3B15;
+  background-color: #579e3e;
 }
 .navigationbar .navbar-nav .nav-item:hover .nav-link::before, .navigationbar .navbar-nav .nav-item:hover .nav-link::after {
   border-color: transparent #1F3B15 transparent transparent;
 }
 
-.careercontent {
+.careercontent, .downloadable {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
   padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 .whycompscience,
 .favoritecourses,
-.people {
+.people, .random, .thiswebproject, .mvcdotnetexample {
   width: 20rem;
 }
 
@@ -4400,7 +4401,7 @@ textarea.form-control-lg {
 
 .card, .whycompscience,
 .favoritecourses,
-.people {
+.people, .random, .thiswebproject, .mvcdotnetexample {
   --bs-card-spacer-y: 1rem;
   --bs-card-spacer-x: 1rem;
   --bs-card-title-spacer-y: 0.5rem;
@@ -4434,37 +4435,40 @@ textarea.form-control-lg {
 }
 .card > hr, .whycompscience > hr,
 .favoritecourses > hr,
-.people > hr {
+.people > hr, .random > hr, .thiswebproject > hr, .mvcdotnetexample > hr {
   margin-right: 0;
   margin-left: 0;
 }
 .card > .list-group, .whycompscience > .list-group,
 .favoritecourses > .list-group,
-.people > .list-group {
+.people > .list-group, .random > .list-group, .thiswebproject > .list-group, .mvcdotnetexample > .list-group {
   border-top: inherit;
   border-bottom: inherit;
 }
 .card > .list-group:first-child, .whycompscience > .list-group:first-child,
 .favoritecourses > .list-group:first-child,
-.people > .list-group:first-child {
+.people > .list-group:first-child, .random > .list-group:first-child, .thiswebproject > .list-group:first-child, .mvcdotnetexample > .list-group:first-child {
   border-top-width: 0;
   border-top-left-radius: var(--bs-card-inner-border-radius);
   border-top-right-radius: var(--bs-card-inner-border-radius);
 }
 .card > .list-group:last-child, .whycompscience > .list-group:last-child,
 .favoritecourses > .list-group:last-child,
-.people > .list-group:last-child {
+.people > .list-group:last-child, .random > .list-group:last-child, .thiswebproject > .list-group:last-child, .mvcdotnetexample > .list-group:last-child {
   border-bottom-width: 0;
   border-bottom-right-radius: var(--bs-card-inner-border-radius);
   border-bottom-left-radius: var(--bs-card-inner-border-radius);
 }
 .card > .card-header + .list-group, .whycompscience > .card-header + .list-group,
 .favoritecourses > .card-header + .list-group,
-.people > .card-header + .list-group,
+.people > .card-header + .list-group, .random > .card-header + .list-group, .thiswebproject > .card-header + .list-group, .mvcdotnetexample > .card-header + .list-group,
 .card > .list-group + .card-footer,
 .whycompscience > .list-group + .card-footer,
 .favoritecourses > .list-group + .card-footer,
-.people > .list-group + .card-footer {
+.people > .list-group + .card-footer,
+.random > .list-group + .card-footer,
+.thiswebproject > .list-group + .card-footer,
+.mvcdotnetexample > .list-group + .card-footer {
   border-top: 0;
 }
 
@@ -4560,7 +4564,7 @@ textarea.form-control-lg {
 
 .card-group > .card, .card-group > .whycompscience,
 .card-group > .favoritecourses,
-.card-group > .people {
+.card-group > .people, .card-group > .random, .card-group > .thiswebproject, .card-group > .mvcdotnetexample {
   margin-bottom: var(--bs-card-group-margin);
 }
 @media (min-width: 576px) {
@@ -4570,72 +4574,96 @@ textarea.form-control-lg {
   }
   .card-group > .card, .card-group > .whycompscience,
   .card-group > .favoritecourses,
-  .card-group > .people {
+  .card-group > .people, .card-group > .random, .card-group > .thiswebproject, .card-group > .mvcdotnetexample {
     flex: 1 0 0%;
     margin-bottom: 0;
   }
   .card-group > .card + .card, .card-group > .whycompscience + .card,
   .card-group > .favoritecourses + .card,
-  .card-group > .people + .card, .card-group > .card + .whycompscience, .card-group > .whycompscience + .whycompscience,
+  .card-group > .people + .card, .card-group > .random + .card, .card-group > .thiswebproject + .card, .card-group > .mvcdotnetexample + .card, .card-group > .card + .whycompscience, .card-group > .whycompscience + .whycompscience,
   .card-group > .favoritecourses + .whycompscience,
-  .card-group > .people + .whycompscience,
+  .card-group > .people + .whycompscience, .card-group > .random + .whycompscience, .card-group > .thiswebproject + .whycompscience, .card-group > .mvcdotnetexample + .whycompscience,
   .card-group > .card + .favoritecourses,
   .card-group > .whycompscience + .favoritecourses,
   .card-group > .favoritecourses + .favoritecourses,
   .card-group > .people + .favoritecourses,
+  .card-group > .random + .favoritecourses,
+  .card-group > .thiswebproject + .favoritecourses,
+  .card-group > .mvcdotnetexample + .favoritecourses,
   .card-group > .card + .people,
   .card-group > .whycompscience + .people,
   .card-group > .favoritecourses + .people,
-  .card-group > .people + .people {
+  .card-group > .people + .people,
+  .card-group > .random + .people,
+  .card-group > .thiswebproject + .people,
+  .card-group > .mvcdotnetexample + .people, .card-group > .card + .random, .card-group > .whycompscience + .random,
+  .card-group > .favoritecourses + .random,
+  .card-group > .people + .random, .card-group > .random + .random, .card-group > .thiswebproject + .random, .card-group > .mvcdotnetexample + .random, .card-group > .card + .thiswebproject, .card-group > .whycompscience + .thiswebproject,
+  .card-group > .favoritecourses + .thiswebproject,
+  .card-group > .people + .thiswebproject, .card-group > .random + .thiswebproject, .card-group > .thiswebproject + .thiswebproject, .card-group > .mvcdotnetexample + .thiswebproject, .card-group > .card + .mvcdotnetexample, .card-group > .whycompscience + .mvcdotnetexample,
+  .card-group > .favoritecourses + .mvcdotnetexample,
+  .card-group > .people + .mvcdotnetexample, .card-group > .random + .mvcdotnetexample, .card-group > .thiswebproject + .mvcdotnetexample, .card-group > .mvcdotnetexample + .mvcdotnetexample {
     margin-left: 0;
     border-left: 0;
   }
   .card-group > .card:not(:last-child), .card-group > .whycompscience:not(:last-child),
   .card-group > .favoritecourses:not(:last-child),
-  .card-group > .people:not(:last-child) {
+  .card-group > .people:not(:last-child), .card-group > .random:not(:last-child), .card-group > .thiswebproject:not(:last-child), .card-group > .mvcdotnetexample:not(:last-child) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
   .card-group > .card:not(:last-child) .card-img-top, .card-group > .whycompscience:not(:last-child) .card-img-top,
   .card-group > .favoritecourses:not(:last-child) .card-img-top,
-  .card-group > .people:not(:last-child) .card-img-top,
+  .card-group > .people:not(:last-child) .card-img-top, .card-group > .random:not(:last-child) .card-img-top, .card-group > .thiswebproject:not(:last-child) .card-img-top, .card-group > .mvcdotnetexample:not(:last-child) .card-img-top,
   .card-group > .card:not(:last-child) .card-header,
   .card-group > .whycompscience:not(:last-child) .card-header,
   .card-group > .favoritecourses:not(:last-child) .card-header,
-  .card-group > .people:not(:last-child) .card-header {
+  .card-group > .people:not(:last-child) .card-header,
+  .card-group > .random:not(:last-child) .card-header,
+  .card-group > .thiswebproject:not(:last-child) .card-header,
+  .card-group > .mvcdotnetexample:not(:last-child) .card-header {
     border-top-right-radius: 0;
   }
   .card-group > .card:not(:last-child) .card-img-bottom, .card-group > .whycompscience:not(:last-child) .card-img-bottom,
   .card-group > .favoritecourses:not(:last-child) .card-img-bottom,
-  .card-group > .people:not(:last-child) .card-img-bottom,
+  .card-group > .people:not(:last-child) .card-img-bottom, .card-group > .random:not(:last-child) .card-img-bottom, .card-group > .thiswebproject:not(:last-child) .card-img-bottom, .card-group > .mvcdotnetexample:not(:last-child) .card-img-bottom,
   .card-group > .card:not(:last-child) .card-footer,
   .card-group > .whycompscience:not(:last-child) .card-footer,
   .card-group > .favoritecourses:not(:last-child) .card-footer,
-  .card-group > .people:not(:last-child) .card-footer {
+  .card-group > .people:not(:last-child) .card-footer,
+  .card-group > .random:not(:last-child) .card-footer,
+  .card-group > .thiswebproject:not(:last-child) .card-footer,
+  .card-group > .mvcdotnetexample:not(:last-child) .card-footer {
     border-bottom-right-radius: 0;
   }
   .card-group > .card:not(:first-child), .card-group > .whycompscience:not(:first-child),
   .card-group > .favoritecourses:not(:first-child),
-  .card-group > .people:not(:first-child) {
+  .card-group > .people:not(:first-child), .card-group > .random:not(:first-child), .card-group > .thiswebproject:not(:first-child), .card-group > .mvcdotnetexample:not(:first-child) {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
   }
   .card-group > .card:not(:first-child) .card-img-top, .card-group > .whycompscience:not(:first-child) .card-img-top,
   .card-group > .favoritecourses:not(:first-child) .card-img-top,
-  .card-group > .people:not(:first-child) .card-img-top,
+  .card-group > .people:not(:first-child) .card-img-top, .card-group > .random:not(:first-child) .card-img-top, .card-group > .thiswebproject:not(:first-child) .card-img-top, .card-group > .mvcdotnetexample:not(:first-child) .card-img-top,
   .card-group > .card:not(:first-child) .card-header,
   .card-group > .whycompscience:not(:first-child) .card-header,
   .card-group > .favoritecourses:not(:first-child) .card-header,
-  .card-group > .people:not(:first-child) .card-header {
+  .card-group > .people:not(:first-child) .card-header,
+  .card-group > .random:not(:first-child) .card-header,
+  .card-group > .thiswebproject:not(:first-child) .card-header,
+  .card-group > .mvcdotnetexample:not(:first-child) .card-header {
     border-top-left-radius: 0;
   }
   .card-group > .card:not(:first-child) .card-img-bottom, .card-group > .whycompscience:not(:first-child) .card-img-bottom,
   .card-group > .favoritecourses:not(:first-child) .card-img-bottom,
-  .card-group > .people:not(:first-child) .card-img-bottom,
+  .card-group > .people:not(:first-child) .card-img-bottom, .card-group > .random:not(:first-child) .card-img-bottom, .card-group > .thiswebproject:not(:first-child) .card-img-bottom, .card-group > .mvcdotnetexample:not(:first-child) .card-img-bottom,
   .card-group > .card:not(:first-child) .card-footer,
   .card-group > .whycompscience:not(:first-child) .card-footer,
   .card-group > .favoritecourses:not(:first-child) .card-footer,
-  .card-group > .people:not(:first-child) .card-footer {
+  .card-group > .people:not(:first-child) .card-footer,
+  .card-group > .random:not(:first-child) .card-footer,
+  .card-group > .thiswebproject:not(:first-child) .card-footer,
+  .card-group > .mvcdotnetexample:not(:first-child) .card-footer {
     border-bottom-left-radius: 0;
   }
 }
