--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -108,6 +108,12 @@
   padding-bottom: 80px;
 }
 
+.whycompscience,
+.favoritecourses,
+.people, .random, .thiswebproject, .mvcdotnetexample {
+  width: 20rem;
+}
+
 /*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
